--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: make
       run: make
+      
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v3
+      with:
+        name: prochotctl
+        path: prochotctl
+        retention-days: 5
